--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>HeWo - Hellow World, in a Containers</title>
+        <title>HeWo - Hello World, in a Container</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="stylesheet" href="contrib/font-awesome/css/font-awesome.min.css">
